--- a/Record/build.gradle
+++ b/Record/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 26
-        targetSdk 32
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -19,6 +19,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion jetpack_compose_version
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -37,4 +40,25 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Jetpack Compose
+    implementation "androidx.activity:activity-compose:1.4.0"
+    implementation "androidx.compose.ui:ui-tooling:$jetpack_compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$jetpack_compose_version"
+    implementation "androidx.compose.runtime:runtime-rxjava2:$jetpack_compose_version"
+    implementation "androidx.compose.compiler:compiler:1.1.0-rc02"
+    implementation "androidx.compose.foundation:foundation:$jetpack_compose_version"
+    implementation "androidx.compose.material:material:$jetpack_compose_version"
+    implementation "androidx.compose.material:material-icons-core:$jetpack_compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$jetpack_compose_version"
+    implementation "androidx.compose.animation:animation:$jetpack_compose_version"
+    implementation "androidx.compose.ui:ui:$jetpack_compose_version"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.10.0"
+    implementation "com.google.accompanist:accompanist-insets:0.10.0"
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:31.0.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
 }
