--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,26 @@
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
+        ext.kotlin_version = "1.7.10"
+        ext.jetpack_compose_version = "1.3.0"
+        ext.navigation_version = "2.3.5"
+        ext.apollo_version = "2.5.8"
+        ext.hilt_version = "2.41"
+        ext.arrow_version = "1.0.1"
+        ext.compose_navigation_version = "2.5.1"
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
+    }
+}
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
