--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -56,7 +58,29 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    //Jetpack Compose
+    implementation "androidx.activity:activity-compose:1.4.0"
+    implementation "androidx.compose.ui:ui-tooling:$jetpack_compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$jetpack_compose_version"
+    implementation "androidx.compose.runtime:runtime-rxjava2:$jetpack_compose_version"
+    implementation "androidx.compose.compiler:compiler:1.1.0-rc02"
+    implementation "androidx.compose.foundation:foundation:$jetpack_compose_version"
+    implementation "androidx.compose.material:material:$jetpack_compose_version"
+    implementation "androidx.compose.material:material-icons-core:$jetpack_compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$jetpack_compose_version"
+    implementation "androidx.compose.animation:animation:$jetpack_compose_version"
+    implementation "androidx.compose.ui:ui:$jetpack_compose_version"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.10.0"
+    implementation "com.google.accompanist:accompanist-insets:0.10.0"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$jetpack_compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$jetpack_compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$jetpack_compose_version"
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:31.0.1')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
 }
