--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Diary"
 include ':app'
-include ':Record'
+include ':record'
+include ':core'
