--- a/record/build.gradle
+++ b/record/build.gradle
@@ -23,6 +23,9 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion jetpack_compose_version
     }
+    buildFeatures {
+        compose true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -34,7 +37,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     testImplementation 'junit:junit:4.13.2'
@@ -46,7 +49,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$jetpack_compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$jetpack_compose_version"
     implementation "androidx.compose.runtime:runtime-rxjava2:$jetpack_compose_version"
-    implementation "androidx.compose.compiler:compiler:1.1.0-rc02"
+    implementation "androidx.compose.compiler:compiler:1.3.2"
     implementation "androidx.compose.foundation:foundation:$jetpack_compose_version"
     implementation "androidx.compose.material:material:$jetpack_compose_version"
     implementation "androidx.compose.material:material-icons-core:$jetpack_compose_version"
