--- a/record/build.gradle
+++ b/record/build.gradle
@@ -39,13 +39,15 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha01'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation project(path: ':core')
+
     //Jetpack Compose
-    implementation "androidx.activity:activity-compose:1.4.0"
+    implementation "androidx.activity:activity-compose:1.6.1"
     implementation "androidx.compose.ui:ui-tooling:$jetpack_compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$jetpack_compose_version"
     implementation "androidx.compose.runtime:runtime-rxjava2:$jetpack_compose_version"
@@ -56,7 +58,7 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$jetpack_compose_version"
     implementation "androidx.compose.animation:animation:$jetpack_compose_version"
     implementation "androidx.compose.ui:ui:$jetpack_compose_version"
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha04"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.10.0"
     implementation "com.google.accompanist:accompanist-insets:0.10.0"
 
