--- a/core/build.gradle
+++ b/core/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha04"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.10.0"
     implementation "com.google.accompanist:accompanist-insets:0.10.0"
+
+    debugImplementation "androidx.customview:customview-poolingcontainer:1.0.0"
 }
