--- a/records/build.gradle
+++ b/records/build.gradle
@@ -71,4 +71,13 @@ dependencies {
 
     // Arrow
     implementation "io.arrow-kt:arrow-core:$arrow_version"
+
+    // Koin
+    implementation "io.insert-koin:koin-android:$koin_android_version"
+    testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
+    implementation "io.insert-koin:koin-androidx-compose:$koin_android_compose_version"
+
+    // Apollo
+    implementation "com.apollographql.apollo3:apollo-runtime:$apollo_version"
+//    implementation "com.apollographql.apollo:apollo-coroutines-support:$apollo_version"
 }
