--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,13 @@ buildscript {
         ext.kotlin_version = "1.7.0"
         ext.jetpack_compose_version = "1.3.0"
         ext.navigation_version = "2.3.5"
-        ext.apollo_version = "2.5.8"
+        ext.apollo_version = "3.6.2"
         ext.hilt_version = "2.41"
         ext.arrow_version = "1.1.2"
         ext.compose_navigation_version = "2.5.1"
+        ext.koin_version= "3.2.2"
+        ext.koin_android_version= "3.3.0"
+        ext.koin_android_compose_version= "3.3.0"
     }
 
     repositories {
