--- a/schema/build.gradle
+++ b/schema/build.gradle
@@ -44,5 +44,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation("com.apollographql.apollo3:apollo-runtime:3.6.2")
+    implementation("com.apollographql.apollo3:apollo-api:3.6.2")
 }
