repository, network modules

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.0.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
+
+    // Koin
+    implementation "io.insert-koin:koin-android:$koin_android_version"
+    testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
+    implementation "io.insert-koin:koin-androidx-compose:$koin_android_compose_version"
 }
