--- a/records/build.gradle
+++ b/records/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.10.0"
     implementation "com.google.accompanist:accompanist-insets:0.10.0"
 
+    debugImplementation "androidx.customview:customview-poolingcontainer:1.0.0"
+
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:31.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
