--- a/network/build.gradle
+++ b/network/build.gradle
@@ -43,4 +43,9 @@ dependencies {
 
     // Apollo
     implementation "com.apollographql.apollo3:apollo-runtime:$apollo_version"
+
+    // Koin
+    implementation "io.insert-koin:koin-android:$koin_android_version"
+    testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
+    implementation "io.insert-koin:koin-androidx-compose:$koin_android_compose_version"
 }
