--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
         minSdk 26
-        targetSdk 33
+        targetSdk 32
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -19,12 +19,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion jetpack_compose_version
-    }
-    buildFeatures {
-        compose true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -37,12 +31,16 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'androidx.compose.material3:material3:1.1.0-alpha01'
+    implementation 'com.google.android.material:material:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation project(path: ':core')
+    implementation project(path: ':network')
+    implementation project(path: ':schema')
 
     //Jetpack Compose
     implementation "androidx.activity:activity-compose:1.6.1"
@@ -54,7 +52,6 @@ dependencies {
     implementation "androidx.compose.material:material:$jetpack_compose_version"
     implementation "androidx.compose.material:material-icons-core:$jetpack_compose_version"
     implementation "androidx.compose.material:material-icons-extended:$jetpack_compose_version"
-    implementation "androidx.compose.material3:material3:1.1.0-alpha01"
     implementation "androidx.compose.animation:animation:$jetpack_compose_version"
     implementation "androidx.compose.ui:ui:$jetpack_compose_version"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha04"
@@ -62,14 +59,26 @@ dependencies {
     implementation "com.google.accompanist:accompanist-insets:0.10.0"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
-    // Compose Dialogs
-    implementation "io.github.vanpra.compose-material-dialogs:color:0.6.2"
-    implementation "io.github.vanpra.compose-material-dialogs:datetime:0.6.2"
+    // Accompanist
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.10.0"
+    implementation "com.google.accompanist:accompanist-insets:0.10.0"
 
     debugImplementation "androidx.customview:customview-poolingcontainer:1.0.0"
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:31.0.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+
+    // Arrow
+    implementation "io.arrow-kt:arrow-core:$arrow_version"
 
     // Koin
     implementation "io.insert-koin:koin-android:$koin_android_version"
     testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
     implementation "io.insert-koin:koin-androidx-compose:$koin_android_compose_version"
+
+    // Apollo
+    implementation "com.apollographql.apollo3:apollo-runtime:$apollo_version"
+//    implementation "com.apollographql.apollo:apollo-coroutines-support:$apollo_version"
 }
