--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -4,14 +4,17 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 26
-        targetSdk 32
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -27,6 +30,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion jetpack_compose_version
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 }
 
 dependencies {
@@ -34,6 +48,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
+    implementation "androidx.compose.ui:ui-tooling-preview:$jetpack_compose_version"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -62,8 +78,12 @@ dependencies {
     // Accompanist
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.10.0"
     implementation "com.google.accompanist:accompanist-insets:0.10.0"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$jetpack_compose_version"
 
     debugImplementation "androidx.customview:customview-poolingcontainer:1.0.0"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:$compose_navigation_version"
 
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:31.0.0')
@@ -80,5 +100,6 @@ dependencies {
 
     // Apollo
     implementation "com.apollographql.apollo3:apollo-runtime:$apollo_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$jetpack_compose_version"
 //    implementation "com.apollographql.apollo:apollo-coroutines-support:$apollo_version"
 }
