--- a/core/build.gradle
+++ b/core/build.gradle
@@ -39,10 +39,10 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'androidx.compose.material3:material3:1.1.0-alpha01'
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha02'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     //Jetpack Compose
     implementation "androidx.activity:activity-compose:1.6.1"
@@ -50,21 +50,16 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-livedata:$jetpack_compose_version"
     implementation "androidx.compose.runtime:runtime-rxjava2:$jetpack_compose_version"
     implementation "androidx.compose.compiler:compiler:1.3.2"
-    implementation "androidx.compose.foundation:foundation:$jetpack_compose_version"
+    implementation "androidx.compose.foundation:foundation:1.4.0-alpha02"
     implementation "androidx.compose.material:material:$jetpack_compose_version"
     implementation "androidx.compose.material:material-icons-core:$jetpack_compose_version"
     implementation "androidx.compose.material:material-icons-extended:$jetpack_compose_version"
-    implementation "androidx.compose.material3:material3:1.1.0-alpha01"
     implementation "androidx.compose.animation:animation:$jetpack_compose_version"
     implementation "androidx.compose.ui:ui:$jetpack_compose_version"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha04"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.10.0"
     implementation "com.google.accompanist:accompanist-insets:0.10.0"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-
-    // Compose Dialogs
-    implementation "io.github.vanpra.compose-material-dialogs:color:0.6.2"
-    implementation "io.github.vanpra.compose-material-dialogs:datetime:0.6.2"
 
     debugImplementation "androidx.customview:customview-poolingcontainer:1.0.0"
 
